userInfo, logout, middleware, bcrypt password

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 PORT = 8000
 MONGODB_URL = mongodb+srv://utkarshchaturvedi:Utkarsh%4019561167@cluster0.mpjf9hx.mongodb.net
 SECRET = SECRET
+CLIENT_URL = http://localhost:3000
